# Pouch

./: .gitignore  .mcp.json  BACKLOG.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json.bak
.githooks/: commit-msg  post-commit  pre-commit
docs/: BOUNDARY-PROMOTION.md  CONTEXT-PERSONALIZATION.md  GLOSSARY.md  HOW-IT-WORKS.md  HOW-PROPOSALS-WORK.md  MEMORY-POSITIONING.md  MEMORY-REPLACE-DESIGN.md  OWNER-NOTES.md  PERSONALIZATION-LEARNING.md  PROJECT-POUCH.md  RAFT-DESIGN.md  TOOLKIT-OPTIMIZATION.md
src/pouch/: __init__.py  cli.py  confirm.py  gitio.py  paths.py  report.py  status.py  textview.py
tests/: conftest.py  test_cli.py  test_confirm.py  test_paths.py  test_report.py  test_status.py
tests/backup/: test_commands.py  test_core.py  test_local.py
tests/boundary/: test_commands.py  test_templates.py
tests/catalog/: test_boundary_gate.py  test_boundary_promote.py  test_commands.py  test_commands_hooks.py  test_demote.py  test_hook_install.py  test_importer.py  test_importer_docs.py  test_importer_hooks.py  test_importer_owned.py  test_importer_plugin.py  test_install.py  test_install_drawers.py  test_kind_collision.py  test_migrate_command.py  test_model.py  test_project_pouch.py  test_promote.py  test_promote_from_repo.py  test_recommend.py  test_rehome.py  test_rule_drawer.py  test_store.py  test_sweep.py  test_sweep_marker.py  test_sync.py  test_uninstall.py  test_uninstall_drawers.py
tests/checkpoint/: test_anchor.py  test_commands.py  test_render.py
tests/evolution/: test_advice.py  test_aggregate.py  test_attach.py  (+24 more)
(+120 files in other folders)
