[project]
name = "pouch"
version = "0.1.0"
description = "나에게 맞춰지고 쓸수록 진화하는, 에이전트를 위한 개인 하네스."
readme = "README.md"
authors = [
    { name = "HaeDalWang" }
]
requires-python = ">=3.11"
dependencies = [
    "python-frontmatter>=1.3.0",
    "typer>=0.26.8",
]

[project.scripts]
pouch = "pouch.cli:app"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
